// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Component Advanced DatePicker Component should render the Advanced DatePicker Component 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-htwhyh ant-space-vertical"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 5px;"
    />
    <div
      class="ant-space-item"
    >
      <span
        class="ant-input-affix-wrapper ant-input-affix-wrapper-readonly ant-dropdown-trigger css-dev-only-do-not-override-htwhyh"
        style="width: 120px;"
      >
        <input
          class="ant-input css-dev-only-do-not-override-htwhyh"
          readonly=""
          type="text"
          value="Jul 09, 2023"
        />
        <span
          class="ant-input-suffix"
        >
          <div
            class="sc-fsQiph kulHsB"
            style="pointer-events: all;"
          >
            <svg
              fill="currentColor"
              height="19"
              viewBox="0 0 24 24"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zm0-12H5V6h14v2zm-7 5h5v5h-5z"
              />
            </svg>
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DatePicker Component Advanced Range Picker shoud render AdvancedRangePicker component with default props 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-htwhyh ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 20px;"
    >
      <div
        class="ant-space css-dev-only-do-not-override-htwhyh ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 5px;"
        />
        <div
          class="ant-space-item"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-readonly ant-dropdown-trigger css-dev-only-do-not-override-htwhyh"
            style="width: 120px;"
          >
            <input
              class="ant-input css-dev-only-do-not-override-htwhyh"
              readonly=""
              type="text"
              value="Jul 09, 2022"
            />
            <span
              class="ant-input-suffix"
            >
              <div
                class="sc-fsQiph kulHsB"
                style="pointer-events: all;"
              >
                <svg
                  fill="currentColor"
                  height="19"
                  viewBox="0 0 24 24"
                  width="19"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zm0-12H5V6h14v2zm-7 5h5v5h-5z"
                  />
                </svg>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-space css-dev-only-do-not-override-htwhyh ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 5px;"
        />
        <div
          class="ant-space-item"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-readonly ant-dropdown-trigger css-dev-only-do-not-override-htwhyh"
            style="width: 120px;"
          >
            <input
              class="ant-input css-dev-only-do-not-override-htwhyh"
              readonly=""
              type="text"
              value="Jul 08, 2023"
            />
            <span
              class="ant-input-suffix"
            >
              <div
                class="sc-fsQiph kulHsB"
                style="pointer-events: all;"
              >
                <svg
                  fill="currentColor"
                  height="19"
                  viewBox="0 0 24 24"
                  width="19"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zm0-12H5V6h14v2zm-7 5h5v5h-5z"
                  />
                </svg>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker Component Basic DatePicker Component should render the Basic DatePicker Component 1`] = `
<div>
  <div
    class="ant-picker css-dev-only-do-not-override-htwhyh"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select date"
        readonly=""
        size="12"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DatePicker Component Default DatePicker Component should render the Default DatePicker Component 1`] = `
<div>
  <div
    class="ant-picker css-dev-only-do-not-override-htwhyh"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select date"
        readonly=""
        size="12"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`DatePicker Component should render the DatePicker Component 1`] = `
<div>
  <div
    class="ant-picker css-dev-only-do-not-override-htwhyh"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select date"
        readonly=""
        size="12"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;
